fixing lobby spacing

--- a/frequent-fliers-html/lobby.css
+++ b/frequent-fliers-html/lobby.css
@@ -202,7 +202,6 @@ button:hover {
   .instruction{
     margin:auto;
     text-align: center;
-    width: 100%
   }
 
   .table-spacer{
